@@ -1,1 +1,9 @@
 Mike Lampard <mlampard@users.sourceforge.net>
+- Primary developer / Maintainer
+
+*** Contributions:
+
+Nedko Arnaudov
+- patch to improve responsiveness
+- patch to respond to volume control/mute
+
