@@ -4,3 +4,5 @@ SVN
 - added ability to scroll through playlist and play selected songs with the
 volume control/play button.
 - best used with g15daemon wip
+- Respond to volume wheel & mute button
+- Improve responsiveness
